turtleart.lessons.turtleart.Main.Square.scala.error
Source:8: error: method cote has return statement; needs result type
		return;
                ^